--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,21 @@
 <html>
+<link href='https://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
+<!--
+<font size="40">Writing Code AnyWhere!</font>
 
+<br/>
+-->
+<!-- default -->
+<div align="center">
 test
+<table bgcolor="#49007F" width="800" height="500">
+  <td>
+	test
+  </td>
 
+  <td bgcolor="blue" width="80%">
+	test
+  </td>
+</table>
+</div>
 </html>
