--- a/html/index.html
+++ b/html/index.html
@@ -1,21 +1,17 @@
+<!DOCTYPE html>
 <html>
-<link href='https://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
-<!--
-<font size="40">Writing Code AnyWhere!</font>
+  <head>
+	<meta charset="UTF-8">
+	<title>sample_index</title>
+	<link rel="stylesheet" type="text/css" href="css/sample.css">
+	<script src="js/sample.js"></script>
+  </head>
 
-<br/>
--->
-<!-- default -->
-<div align="center">
-test
-<table bgcolor="#49007F" width="800" height="500">
-  <td>
-	test
-  </td>
+  <body>
+	<h1>sample_test</h1>
 
-  <td bgcolor="blue" width="80%">
-	test
-  </td>
-</table>
-</div>
+	<p>hogehoge piyopiyo</p>
+
+	<a href="cgi-bin/sample.py">cgi-link</a>
+  </body>
 </html>
